--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "expo": "^33.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "~1.2.1",
+    "react-native-reanimated": "1.0.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
